examples/test_package/Double_dc_only_report_tool_new/steps/dpl__forin_rough_run2/#test_results_result.txt
Error evaluating Problog model:
    result = action(s, pos)
             ^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/parser.py", line 370, in _token_dot
    raise UnexpectedCharacter(s, pos)
problog.parser.UnexpectedCharacter: Unexpected character '.' at 1:67.% Problog Inference Result：
insertion_sort([3, 1, 2, 5, 7, 12],[1, 2, 3, 5, 7, 12]) = 1.0000